[gd_scene load_steps=5 format=3 uid="uid://tok3p3bx8dry"]

[ext_resource type="Script" path="res://scenes/interface_base/battlesim/tower_basic/tower_basic.gd" id="1_ja1sv"]
[ext_resource type="PackedScene" uid="uid://bsqfqqlswcbnk" path="res://scenes/interface_base/battlesim/utility/health_bar/health_bar.tscn" id="3_1uhiw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jqxoa"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e5r60"]
radius = 100.0

[node name="TowerBasic" type="CharacterBody2D" groups=["restart_map"]]
script = ExtResource("1_ja1sv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jqxoa")

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_e5r60")

[node name="HealthBar" parent="." instance=ExtResource("3_1uhiw")]
unique_name_in_owner = true
offset_left = -47.0
offset_top = -46.0
offset_right = 47.0
offset_bottom = -39.0

[node name="AttTimer" type="Timer" parent="."]

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="died" from="HealthBar" to="." method="_on_health_bar_died"]
[connection signal="timeout" from="AttTimer" to="." method="_on_att_timer_timeout"]
